# poor-trader-dashboard

./: .gitignore  DASHBOARD_README.md  README.md  api_config.yaml  data.sqlite3  manual_input.yaml  pyproject.toml  requirements-web.txt  requirements.txt  run_dashboard.cmd  run_dashboard.command  run_dashboard.py  start_dashboard.bat  start_dashboard.sh  trader_alerts.sqlite3  trader_alerts.sqlite3-shm  trader_alerts.sqlite3-wal
Poor Trader Dashboard.app/Contents/: Info.plist
Poor Trader Dashboard.app/Contents/MacOS/: Poor Trader Dashboard
cloudflare/: schema.sql  seed-dump.sql  seed-from-sqlite.sh
cloudflare/pages/: index.html
cloudflare/worker/: package-lock.json  package.json  wrangler.toml
cloudflare/worker/src/: index.ts
cloudflare/worker/src/lib/: db.ts  fetchers.ts  finnhub.ts  regime.ts  signals.ts  stooq.ts  types.ts  world.ts  yahoo.ts
src/trader_alerts/: backfill.py  cli.py  constants.py  historical.py  market.py  models.py  news.py  regime.py  rules.py  service.py  settings.py  signals.py  storage.py  world.py
src/trader_alerts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/trader_alerts/providers/: __init__.py  base.py  cnn.py  fred.py  http_json.py  macromicro.py  manual.py  multpl.py  nasdaq100_breadth.py  nasdaq_pe.py  ndtw.py  sp500_rsi.py  streetstats.py  tradingeconomics.py  tradingview_ws.py  vix.py  ycharts.py
src/trader_alerts/web/: __init__.py  app.py
src/trader_alerts/web/templates/: index.html
